--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pl_PL.json
@@ -56,19 +56,19 @@
   "pci_projects_project_instances_add_privateNetwork_public_mode_description1": "To klasyczny model sieci instancji Public Cloud. Instancje będą miały przypisany publiczny port sieciowy.",
   "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Tryb ten nie jest kompatybilny z nowymi usługami sieciowymi (Load Balancer lub Floating IP).",
   "pci_projects_project_instances_add_privateNetwork_private_mode": "Tryb prywatny",
-  "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Instancje będą przypisane wyłącznie do sieci prywatnej. Sieć może być całkowicie prywatna lub dostępna z Internetu za pośrednictwem usług Gateway lub Load Balancer z adresami Floating IP.",
-  "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Pamiętaj, że w przypadku dostępu SSH z Internetu konieczny jest adres Floating IP lub inna instancja (zwana SSH-Proxy).",
+  "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Instancje będą przypisane wyłącznie do sieci prywatnej. Może być ona całkowicie prywatna lub dostępna w Internecie za pośrednictwem usług Gateway lub Load Balancer z adresami Floating IP.",
+  "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Pamiętaj, że w przypadku dostępu SSH z Internetu wymagany jest adres Floating IP lub inna instancja (zwana SSH-Proxy).",
   "pci_projects_project_instances_add_privateNetwork_placeholder": "Wybierz sieć prywatną",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info1": "Wykryliśmy Gateway w wybranej prywatnej sieci. Ponieważ Gateway nie jest kompatybilny z wybranym trybem sieci, może to spowodować nieoczekiwane zachowanie sieci.",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "Jeśli chcesz połączyć instancję z tą prywatną siecią, wybierz <strong>tryb prywatny</strong>.",
   "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Przypisz adres Floating IP do tej instancji",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Aby uzyskać dostęp do instancji w trybie prywatnym, możesz przypisać do niej adres Floating IP. Wybierz adres z listy lub w razie potrzeby utwórz nowy.",
-  "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "Instancja pozostanie prywatna. Możesz się do niej zalogować tylko wtedy, jeśli przypisany jest do niej adres Floating IP lub jeśli inna instancja SSH-Proxy jest dostępna w Twojej sieci.",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Aby uzyskać dostęp do instancji w trybie prywatnym, możesz przypisać do niej Floating IP. Wybierz adres z listy lub w razie potrzeby utwórz nowy.",
+  "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "Instancja pozostanie prywatna. Możesz się do niej zalogować tylko wtedy, gdy zostanie do niej przypisany adres Floating IP lub gdy w Twojej sieci będzie dostępna osobna instancja SSH-Proxy.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Więcej informacji ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "Sprawdź przewodnik",
   "pci_projects_project_instances_add_create_floating_ip_action": "Utwórz nowy adres Floating IP",
   "pci_projects_project_instances_add_select_floating_ip_label": "Wybierz adres Floating IP",
-  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Utworzenie adresu Floating IP nastąpi pod koniec procesu konfiguracji.",
+  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Adres Floating IP zostanie utworzony na koniec procesu konfiguracji.",
   "pci_projects_project_instances_add_billing_gateway_info": "Wykryliśmy brakujące komponenty: <strong>Gateway</strong>",
   "pci_projects_project_instances_add_billing_gateway_detail": "Wybrany flavor to:",
   "pci_projects_project_instances_add_billing_gateway_detail_publiccloud-gateway-s_size": "Rozmiar S",
