--- a/packages/manager/modules/pci/src/components/pci-announcement-banner/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/components/pci-announcement-banner/translations/Messages_pl_PL.json
@@ -1,4 +1,4 @@
 {
-  "pci_projects_beta_public_cloud_banner_info": "Program beta usługi Public Cloud: przetestuj nasze rozwiązania oparte na OpenStack (Load Balancer, instancja routingu, pływające adresy IP i Bare Metal as a Service).",
+  "pci_projects_beta_public_cloud_banner_info": "Program beta dla Public Cloud: przetestuj nasze rozwiązania oparte na OpenStack (Load Balancer, instancja routingu, Floating IP i Bare Metal as a Service).",
   "pci_projects_beta_public_cloud_banner_info_link": "Rozpocznij testy, aktywując region GRA9."
 }
