--- a/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/translations/Messages_en_GB.json
@@ -7,5 +7,5 @@
   "pci_additional_ips_floatingips_edit_select_ip": "Select a network/IP",
   "pci_additional_ips_floatingips_edit_success": "The instance attached to the IP {{ip}} has been edited.",
   "pci_additional_ips_floatingips_edit_error": "An error has occurred editing the attached instance: {{error}}",
-  "pci_additional_ips_floatingips_edit_gateway_error": "We couldn't find a Gateway in the selected private network that is required to attach this floating IP. Please create one first, or select another instance/private network."
+  "pci_additional_ips_floatingips_edit_gateway_error": "Unable to find a gateway in the selected private network that is required to attach this Floating IP. Please create one first, or select another instance/private network."
 }
