--- a/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/translations/Messages_pt_PT.json
@@ -7,5 +7,5 @@
   "pci_additional_ips_floatingips_edit_select_ip": "Escolha uma rede/IP",
   "pci_additional_ips_floatingips_edit_success": "A instância associada ao IP {{ ip }} foi alterada.",
   "pci_additional_ips_floatingips_edit_error": "Ocorreu um erro aquando da modificação da instância associada: {{ error }}",
-  "pci_additional_ips_floatingips_edit_gateway_error": "Não encontrámos um Gateway na rede privada escolhida a fim de associar este IP flutuante. Crie um primeiro ou escolha outra instância ou outra rede privada."
+  "pci_additional_ips_floatingips_edit_gateway_error": "Não encontrámos um Gateway na rede privada escolhida a fim de associar este Floating IP. Crie um primeiro ou escolha outra instância ou outra rede privada."
 }
