--- a/packages/manager/modules/pci/src/projects/project/additional-ips/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/translations/Messages_pl_PL.json
@@ -1,6 +1,6 @@
 {
   "pci_additional_ips_title": "Publiczne adresy IP",
-  "pci_additional_ips_failover_ip_title": "Additional IP",
+  "pci_additional_ips_failover_ip_title": "Dodatkowe IP",
   "pci_additional_ips_floating_ip_title": "Floating IP",
   "pci_additional_ips_additional_ips_description": "Zarządzaj publicznymi adresami IP przypisanymi do Twoich usług",
   "pci_additional_ips_country_US": "Stany Zjednoczone",
