--- a/packages/manager/modules/pci/src/projects/project/gateways/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/translations/Messages_es_ES.json
@@ -2,7 +2,7 @@
   "pci_projects_project_public_gateway_title": "Gateway",
   "pci_projects_project_public_gateways_intro_part_1": "Los servicios Gateway proporcionan conectividad a las instancias privadas, permitiendo acceder de forma segura a las redes externas o exponer la aplicación a un acceso externo:",
   "pci_projects_project_public_gateways_intro_part_2": "En el primer caso, el servicio Gateway actúa como pasarela SNAT, permitiendo que las instancias accedan a internet, pero no al contrario.",
-  "pci_projects_project_public_gateways_intro_part_3": "En el segundo caso, es posible exponer un servicio detrás de una instancia privada o un Load Balancer en internet utilizando las direcciones Floating IP.",
+  "pci_projects_project_public_gateways_intro_part_3": "En el segundo caso, es posible exponer un servicio detrás de una instancia privada o un Load Balancer en internet utilizando las Floating IP.",
   "pci_projects_project_public_gateway_create": "Crear un servicio Gateway",
   "pci_projects_project_public_gateway_name": "Nombre/ID",
   "pci_projects_project_public_gateway_region": "Región",
