--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_de_DE.json
@@ -56,19 +56,19 @@
   "pci_projects_project_instances_add_privateNetwork_public_mode_description1": "Dies ist das klassische Netzwerkmodell von Public Cloud-Instanzen. Die Instanzen bekommen einen öffentlichen Netzwerk-Port zugewiesen.",
   "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Bitte beachten Sie, dass dieser Modus mit neuen Netzwerkdiensten wie Loadbalancer oder Floating IPs nicht kompatibel ist.",
   "pci_projects_project_instances_add_privateNetwork_private_mode": "Privater Modus",
-  "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Die Instanzen werden ausschließlich mit einem privaten Netzwerk verbunden. Dieses Netzwerk kann vollständig privat sein, oder auch durch die Dienste Gateway oder Loadbalancer mit Floating IPs auf das Internet zugreifen.",
+  "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Die Instanzen werden ausschließlich mit einem privaten Netzwerk verbunden. Dieses Netzwerk kann vollständig privat oder aber per Internet zugänglich sein: über die Dienste Gateway oder Loadbalancer mit Floating IPs.",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Für einen SSH-Zugang über das Internet ist eine Floating IP oder eine andere Instanz erforderlich, SSH-Proxy genannt.",
   "pci_projects_project_instances_add_privateNetwork_placeholder": "Wählen Sie ein privates Netzwerk aus",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info1": "Im ausgewählten privaten Netzwerk wurde ein Gateway gefunden. Dieser Gateway ist nicht mit dem gewählten Netzmodus kompatibel, es kann daher zu unvorhergesehenem Verhalten des Netzwerks kommen.",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "Wenn Sie eine Instanz mit diesem privaten Netzwerk verbinden möchten, wählen Sie dazu bitte den <strong>privaten Modus</strong>.",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Dieser Instanz eine Floating IP zuweisen",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Eine Floating IP mit dieser Instanz verbinden",
   "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Auf eine Instanz im privaten Modus können Sie zugreifen, indem Sie ihr eine Floating IP zuweisen. Wählen Sie dazu eine solche aus der Liste aus, oder erstellen Sie bei Bedarf eine neue.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "Die Instanz bleibt weiterhin privat; der Zugriff auf sie ist nur über eine verbundene Floating IP-Adresse möglich, oder wenn in Ihrem Netzwerk eine gesonderte SSH-Proxy-Instanz verfügbar ist.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Für mehr Informationen ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "Mehr dazu erfahren Sie in der Anleitung",
   "pci_projects_project_instances_add_create_floating_ip_action": "Eine neue Floating IP erstellen",
-  "pci_projects_project_instances_add_select_floating_ip_label": "Wählen Sie Floating IP aus",
-  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Die Erstellung Ihrer Floating IP erfolgt am Ende der Konfiguration.",
+  "pci_projects_project_instances_add_select_floating_ip_label": "Wählen Sie eine Floating IP aus",
+  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Ihre Floating IP wird am Ende des Konfigurationsprozesses erstellt.",
   "pci_projects_project_instances_add_billing_gateway_info": "Es fehlen Komponenten: <strong>Gateway</strong>",
   "pci_projects_project_instances_add_billing_gateway_detail": "Der ausgewählte Typ ist:",
   "pci_projects_project_instances_add_billing_gateway_detail_publiccloud-gateway-s_size": "Größe S",
