--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_en_GB.json
@@ -54,21 +54,21 @@
   "pci_projects_project_instances_add_privateNetwork_info1": "Public mode is selected by default: this is the standard network model. This may not be compatible with all products, or available in all regions.",
   "pci_projects_project_instances_add_privateNetwork_public_mode": "Public mode",
   "pci_projects_project_instances_add_privateNetwork_public_mode_description1": "This is the standard network model for Public Cloud instances. Instances will have a public network port attached.",
-  "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Please note that this mode is not compatible for new network services (Load Balancer or floating IPs).",
+  "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Please note that this mode is not compatible for new network services (Load Balancer or Floating IPs).",
   "pci_projects_project_instances_add_privateNetwork_private_mode": "Private mode",
-  "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Instances will only be attached to a private network. It can be either completely private or exposed to the internet using Gateway or Load Balancer services with floating IPs.",
-  "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Please note that for SSH access from the internet, a floating IP or another instance (called SSH-Proxy) is required.",
+  "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Instances will only be attached to a private network. It can be either completely private, or exposed to the internet using Gateway or Load Balancer services with Floating IPs.",
+  "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Please note that for SSH access from the internet, a Floating IP or another instance (called SSH-Proxy) is required.",
   "pci_projects_project_instances_add_privateNetwork_placeholder": "Select a private network",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info1": "We have detected a Gateway within the private network selected. Since the Gateway is not compatible with the network mode concerned, this may result in unexpected network behaviour.",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "If you want to connect an instance to this private network, please select <strong>private mode</strong>.",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Attach a floating IP to this instance",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "To access an instance in private mode, you can attach a floating IP to it. Select one from the list, or create a new one if necessary.",
-  "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "The instance will remain private. You can only access it if it has a floating IP address attached to it, or if a separate SSH-Proxy instance is available in your network.",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Attach a Floating IP to this instance",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "To access an instance in private mode, you can attach a Floating IP to it. Select one from the list, or create a new one if necessary.",
+  "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "The instance will remain private. You can only access it if it has a Floating IP address attached to it, or if a separate SSH-Proxy instance is available in your network.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "For more information, ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "Please refer to this guide",
-  "pci_projects_project_instances_add_create_floating_ip_action": "Create a new floating IP",
-  "pci_projects_project_instances_add_select_floating_ip_label": "Select floating IP",
-  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Your floating IP will be created at the end of the configuration process.",
+  "pci_projects_project_instances_add_create_floating_ip_action": "Create a new Floating IP",
+  "pci_projects_project_instances_add_select_floating_ip_label": "Select a Floating IP",
+  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Your Floating IP will be created at the end of the configuration process.",
   "pci_projects_project_instances_add_billing_gateway_info": "Missing components detected: <strong>Gateway</strong>",
   "pci_projects_project_instances_add_billing_gateway_detail": "The flavor selected is:",
   "pci_projects_project_instances_add_billing_gateway_detail_publiccloud-gateway-s_size": "Size S",
