--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_es_ES.json
@@ -54,9 +54,9 @@
   "pci_projects_project_instances_add_privateNetwork_info1": "El modo público se selecciona por defecto: es el modelo de red convencional. Es posible que no sea compatible con todos los productos o que no esté disponible en todas las regiones.",
   "pci_projects_project_instances_add_privateNetwork_public_mode": "Modo público",
   "pci_projects_project_instances_add_privateNetwork_public_mode_description1": "Es el modelo de red clásico de las instancias Public Cloud. Las instancias tendrán un puerto de red público asociado.",
-  "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Tenga en cuenta que este modo no es compatible con los nuevos servicios de red (Load Balancer o direcciones Floating IP).",
+  "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Tenga en cuenta que este modo no es compatible con los nuevos servicios de red (Load Balancer o Floating IP).",
   "pci_projects_project_instances_add_privateNetwork_private_mode": "Modo privado",
-  "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Las instancias solo estarán asociadas a una red privada. Puede ser totalmente privada o estar expuesta en internet utilizando los servicios Gateway o Load Balancer con las direcciones Floating IP.",
+  "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Las instancias solo estarán asociadas a una red privada. Puede ser totalmente privada o estar expuesta en internet utilizando los servicios Gateway o Load Balancer con las Floating IP.",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Tenga en cuenta que, para un acceso SSH desde internet, necesitará una Floating IP u otra instancia (denominada SSH-Proxy).",
   "pci_projects_project_instances_add_privateNetwork_placeholder": "Seleccione una red privada",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info1": "Ya hay un servicio Gateway dentro de la red privada seleccionada. Si esta última no es compatible con el modo de red seleccionado, podría tener un comportamiento de red inesperado.",
@@ -67,7 +67,7 @@
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Para más información, ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "consulte nuestra guía.",
   "pci_projects_project_instances_add_create_floating_ip_action": "Crear una nueva Floating IP",
-  "pci_projects_project_instances_add_select_floating_ip_label": "Seleccione la Floating IP",
+  "pci_projects_project_instances_add_select_floating_ip_label": "Seleccione una Floating IP",
   "pci_projects_project_instances_add_create_floating_ip_banner_info": "La Floating IP se creará una vez completado el proceso de configuración.",
   "pci_projects_project_instances_add_billing_gateway_info": "Hemos detectado que faltan los siguientes componentes: <strong>Gateway</strong>",
   "pci_projects_project_instances_add_billing_gateway_detail": "El flavor seleccionado es:",
