--- a/packages/manager/modules/pci/src/projects/project/instances/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/translations/Messages_en_GB.json
@@ -63,7 +63,7 @@
   "pci_projects_project_instances_unshelve_label": "Reactivate ",
   "pci_projects_project_instances_name_id": "ID",
   "pci_projects_project_instances_name_id_label": "Name/ID",
-  "pci_projects_project_instances_assign_floating_ip_label": "Assign a floating IP",
+  "pci_projects_project_instances_assign_floating_ip_label": "Assign a Floating IP",
   "pci_projects_project_instances_private_ip": "Private IPs",
   "pci_projects_project_instances_no_data": "No data available."
 }
