fix(i18n): add missing translations [CDS 2020]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_de_DE.json
@@ -15,6 +15,6 @@
   "dedicatedCloud_task_progress_state_toCancel": "Abzubrechen",
   "dedicatedCloud_task_progress_state_toCreate": "Zu erstellen",
   "dedicatedCloud_task_progress_state_unknown": "Unbekannt",
-  "dedicatedCloud_task_progress_state_waitingForChilds": "Ausstehend",
+  "dedicatedCloud_task_progress_state_waitingForChilds": "Warten auf Subtasks",
   "dedicatedCloud_task_progress_state_waitingTodo": "Zu planen"
 }
