--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_en_GB.json
@@ -15,6 +15,6 @@
   "dedicatedCloud_task_progress_state_toCancel": "To be cancelled",
   "dedicatedCloud_task_progress_state_toCreate": "To be created",
   "dedicatedCloud_task_progress_state_unknown": "Unknown",
-  "dedicatedCloud_task_progress_state_waitingForChilds": "Queued",
+  "dedicatedCloud_task_progress_state_waitingForChilds": "Waiting for sub-tasks",
   "dedicatedCloud_task_progress_state_waitingTodo": "To be planned"
 }
