--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_es_ES.json
@@ -15,6 +15,6 @@
   "dedicatedCloud_task_progress_state_toCancel": "Por cancelar",
   "dedicatedCloud_task_progress_state_toCreate": "Por crear",
   "dedicatedCloud_task_progress_state_unknown": "Desconocida",
-  "dedicatedCloud_task_progress_state_waitingForChilds": "Pendiente",
+  "dedicatedCloud_task_progress_state_waitingForChilds": "Pendiente de subtareas",
   "dedicatedCloud_task_progress_state_waitingTodo": "Por planificar"
 }
