--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_it_IT.json
@@ -15,6 +15,6 @@
   "dedicatedCloud_task_progress_state_toCancel": "Da annullare",
   "dedicatedCloud_task_progress_state_toCreate": "Da creare",
   "dedicatedCloud_task_progress_state_unknown": "Sconosciuto",
-  "dedicatedCloud_task_progress_state_waitingForChilds": "In attesa",
+  "dedicatedCloud_task_progress_state_waitingForChilds": "In attesa di subtask",
   "dedicatedCloud_task_progress_state_waitingTodo": "Da pianificare"
 }
