--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/taskPollProgress/translations/Messages_pl_PL.json
@@ -15,6 +15,6 @@
   "dedicatedCloud_task_progress_state_toCancel": "Do anulowania",
   "dedicatedCloud_task_progress_state_toCreate": "Do utworzenia",
   "dedicatedCloud_task_progress_state_unknown": "Nieznany",
-  "dedicatedCloud_task_progress_state_waitingForChilds": "Oczekujące",
+  "dedicatedCloud_task_progress_state_waitingForChilds": "Oczekiwanie na podzadania",
   "dedicatedCloud_task_progress_state_waitingTodo": "Do zaplanowania"
 }
