--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/translations/Messages_en_GB.json
@@ -5,7 +5,7 @@
   "dedicatedCloud_USER_AD_ldap_port": "LDAP port",
   "dedicatedCloud_USER_AD_domain": "Domain",
   "dedicatedCloud_USER_AD_domainAlias": "Domain alias",
-  "dedicatedCloud_USER_AD_bindUser": "Imported user",
+  "dedicatedCloud_USER_AD_bindUser": "User",
   "dedicatedCloud_USER_AD_status": "Status",
   "dedicatedCloud_USER_AD_status_creating": "Creating",
   "dedicatedCloud_USER_AD_status_deleting": "Deleting",
@@ -19,5 +19,7 @@
   "dedicatedCloud_USER_AD_add_federation": "Add an Active Directory LDAPS",
   "dedicatedCloud_USER_AD_edit": "Edit Active Directory",
   "dedicatedCloud_USER_AD_delete": "Delete Active Directory",
-  "dedicatedCloud_USER_AD_unavailable": "You cannot add an external Active Directory within a certified service (HDS, PCI-DSS or SNC) due to the constraints of these perimeters."
+  "dedicatedCloud_USER_AD_unavailable": "You cannot add an external Active Directory within a certified service (HDS, PCI-DSS or SNC) due to the constraints of these perimeters.",
+  "dedicatedCloud_USER_AD_baseDn": "Base DN",
+  "dedicatedCloud_USER_AD_sslThumbprint": "SSL certificate thumbprint"
 }
