--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/translations/Messages_es_ES.json
@@ -5,7 +5,7 @@
   "dedicatedCloud_USER_AD_ldap_port": "Puerto LDAP",
   "dedicatedCloud_USER_AD_domain": "Dominio",
   "dedicatedCloud_USER_AD_domainAlias": "Alias del dominio",
-  "dedicatedCloud_USER_AD_bindUser": "Usuario importado",
+  "dedicatedCloud_USER_AD_bindUser": "Usuario",
   "dedicatedCloud_USER_AD_status": "Estatus",
   "dedicatedCloud_USER_AD_status_creating": "Creando...",
   "dedicatedCloud_USER_AD_status_deleting": "Eliminando...",
@@ -19,5 +19,7 @@
   "dedicatedCloud_USER_AD_add_federation": "Añadir un Active Directory LDAPS",
   "dedicatedCloud_USER_AD_edit": "Modificar el Active Directory",
   "dedicatedCloud_USER_AD_delete": "Eliminar el Active Directory",
-  "dedicatedCloud_USER_AD_unavailable": "No es posible añadir un Active Directory externo en un servicio certificado (HDS, PCI-DSS o SNC), dadas las limitaciones de estos perímetros."
+  "dedicatedCloud_USER_AD_unavailable": "No es posible añadir un Active Directory externo en un servicio certificado (HDS, PCI-DSS o SNC), dadas las limitaciones de estos perímetros.",
+  "dedicatedCloud_USER_AD_baseDn": "Base DN",
+  "dedicatedCloud_USER_AD_sslThumbprint": "Huella del certificado SSL"
 }
