--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/translations/Messages_it_IT.json
@@ -5,7 +5,7 @@
   "dedicatedCloud_USER_AD_ldap_port": "Porta LDAP",
   "dedicatedCloud_USER_AD_domain": "Domini",
   "dedicatedCloud_USER_AD_domainAlias": "Alias del dominio",
-  "dedicatedCloud_USER_AD_bindUser": "Utente importato",
+  "dedicatedCloud_USER_AD_bindUser": "Utente",
   "dedicatedCloud_USER_AD_status": "Stato",
   "dedicatedCloud_USER_AD_status_creating": "In corso di creazione",
   "dedicatedCloud_USER_AD_status_deleting": "Eliminazione in corso...",
@@ -19,5 +19,7 @@
   "dedicatedCloud_USER_AD_add_federation": "Aggiungere un’Active Directory LDAP",
   "dedicatedCloud_USER_AD_edit": "Modificare l’Active Directory",
   "dedicatedCloud_USER_AD_delete": "Eliminare l'Active Directory",
-  "dedicatedCloud_USER_AD_unavailable": "L'aggiunta di un’Active Directory esterna all'interno di un servizio certificato (HDS, PCI-DSS o SNC) non è possibile a causa dei vincoli esistenti."
+  "dedicatedCloud_USER_AD_unavailable": "L'aggiunta di un’Active Directory esterna all'interno di un servizio certificato (HDS, PCI-DSS o SNC) non è possibile a causa dei vincoli esistenti.",
+  "dedicatedCloud_USER_AD_baseDn": "Base DN",
+  "dedicatedCloud_USER_AD_sslThumbprint": "Fingerprint del certificato SSL"
 }
