fix(i18n): add missing translations [CDS 2021]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/web/client/app/components/expiration/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/components/expiration/translations/Messages_es_ES.json
@@ -5,5 +5,6 @@
   "expiration_resiliation_cancel_label": "Cancelar la baja",
   "expiration_wizard_renew": "Renovar",
   "expiration_resiliation_date": "Baja del servicio prevista el <strong>{{t0}}</strong>",
-  "expiration_expiration_date": "Expira el <strong>{{t0}}</strong>"
+  "expiration_expiration_date": "Expira el <strong>{{t0}}</strong>",
+  "expiration_wizard_restore": "Restaurar"
 }
