--- a/packages/manager/apps/web/client/app/components/expiration/translations/Messages_de_DE.json
+++ b/packages/manager/apps/web/client/app/components/expiration/translations/Messages_de_DE.json
@@ -5,5 +5,6 @@
   "expiration_resiliation_cancel_label": "Kündigung stornieren",
   "expiration_wizard_renew": "Verlängern",
   "expiration_resiliation_date": "Kündigung geplant am <strong>{{t0}}</strong>",
-  "expiration_expiration_date": "Läuft ab am <strong>{{t0}}</strong>"
+  "expiration_expiration_date": "Läuft ab am <strong>{{t0}}</strong>",
+  "expiration_wizard_restore": "Wieder herstellen"
 }
