--- a/packages/manager/apps/web/client/app/components/expiration/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/components/expiration/translations/Messages_en_GB.json
@@ -5,5 +5,6 @@
   "expiration_resiliation_cancel_label": "Cancel closure ",
   "expiration_wizard_renew": "Renew",
   "expiration_resiliation_date": "Closure scheduled for <strong>{{t0}}</strong>",
-  "expiration_expiration_date": "Expires <strong>{{t0}}</strong>"
+  "expiration_expiration_date": "Expires <strong>{{t0}}</strong>",
+  "expiration_wizard_restore": "Restore"
 }
