--- a/packages/manager/apps/web/client/app/components/expiration/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/components/expiration/translations/Messages_pt_PT.json
@@ -5,5 +5,6 @@
   "expiration_resiliation_cancel_label": "Anular rescisão",
   "expiration_wizard_renew": "Renovar",
   "expiration_resiliation_date": "Rescisão prevista a <strong>{{t0}}</strong>",
-  "expiration_expiration_date": "Expira a <strong>{{t0}}</strong>"
+  "expiration_expiration_date": "Expira a <strong>{{t0}}</strong>",
+  "expiration_wizard_restore": "Restaurar"
 }
