--- a/packages/manager/apps/web/client/app/components/service-status/translations/Messages_de_DE.json
+++ b/packages/manager/apps/web/client/app/components/service-status/translations/Messages_de_DE.json
@@ -5,5 +5,6 @@
   "status_action_resiliation_date_label": "Kündigung geplant am",
   "status_action_expiration_date_label": "Läuft ab am",
   "status_action_expiration_delete_cancel_label": "Kündigen",
-  "status_action_renew_management": "Meine Dienste verwalten"
+  "status_action_renew_management": "Meine Dienste verwalten",
+  "status_action_wizard_restore": "Wieder herstellen"
 }
