--- a/packages/manager/apps/web/client/app/components/service-status/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/components/service-status/translations/Messages_en_GB.json
@@ -5,5 +5,6 @@
   "status_action_resiliation_date_label": "Closure scheduled on",
   "status_action_expiration_date_label": "Expires on ",
   "status_action_expiration_delete_cancel_label": "Close",
-  "status_action_renew_management": "Manage my services "
+  "status_action_renew_management": "Manage my services ",
+  "status_action_wizard_restore": "Restore"
 }
