--- a/packages/manager/apps/web/client/app/components/service-status/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/components/service-status/translations/Messages_es_ES.json
@@ -5,5 +5,6 @@
   "status_action_resiliation_date_label": "Baja del servicio prevista el",
   "status_action_expiration_date_label": "Caduca el",
   "status_action_expiration_delete_cancel_label": "Dar de baja",
-  "status_action_renew_management": "Administrar mis servicios"
+  "status_action_renew_management": "Administrar mis servicios",
+  "status_action_wizard_restore": "Restaurar"
 }
