--- a/packages/manager/apps/web/client/app/components/service-status/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/components/service-status/translations/Messages_it_IT.json
@@ -5,5 +5,6 @@
   "status_action_resiliation_date_label": "Disattivazione prevista il",
   "status_action_expiration_date_label": "Scade il",
   "status_action_expiration_delete_cancel_label": "Disattiva",
-  "status_action_renew_management": "Gestisci i tuoi servizi"
+  "status_action_renew_management": "Gestisci i tuoi servizi",
+  "status_action_wizard_restore": "Ripristinare"
 }
