--- a/packages/manager/apps/web/client/app/components/service-status/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/components/service-status/translations/Messages_pl_PL.json
@@ -5,5 +5,6 @@
   "status_action_resiliation_date_label": "Zakończenie umowy",
   "status_action_expiration_date_label": "Data wygaśnięcia",
   "status_action_expiration_delete_cancel_label": "Rezygnacja",
-  "status_action_renew_management": "Zarządzanie usługami"
+  "status_action_renew_management": "Zarządzanie usługami",
+  "status_action_wizard_restore": "Przywróć"
 }
