--- a/packages/manager/apps/web/client/app/components/service-status/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/components/service-status/translations/Messages_pt_PT.json
@@ -5,5 +5,6 @@
   "status_action_resiliation_date_label": "Rescisão prevista dia",
   "status_action_expiration_date_label": "Expira a",
   "status_action_expiration_delete_cancel_label": "Rescindir",
-  "status_action_renew_management": "Gerir serviços"
+  "status_action_renew_management": "Gerir serviços",
+  "status_action_wizard_restore": "Restaurar"
 }
