--- a/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_en_GB.json
@@ -824,5 +824,8 @@
   "domain_dashboard_general_information_alldom_termination_info": "Your pack will expire on {{expirationDate}}. The non-cancelled domains included in this pack will be <strong>renewed for free until your pack expires permanently.</strong> After this date, your non-cancelled domains will be billed individually.",
   "domain_dashboard_general_information_alldom_renewal_link": "Undo pack cancellation",
   "domain_dashboard_general_information_alldom_termination_warning_close": "Close",
-  "domain_contact_owner": "Holder"
+  "domain_contact_owner": "Holder",
+  "domain_configuration_renew": "Your domain name is suspended. You can still renew it during the grace period. Once this period has passed, additional fees will apply.",
+  "domain_configuration_restorable": "Your domain name is being deleted. You can still restore it for an additional fee, by following the restore link. If you choose not to do this, your domain name will be permanently deleted.",
+  "domain_configuration_restorable_title_button": "Restore"
 }
