--- a/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_it_IT.json
@@ -825,5 +825,8 @@
   "domain_dashboard_general_information_alldom_termination_info": "Il tuo pack scadrà il {{ expirationDate }}. I domini non disattivati inclusi nel pack saranno<strong> rinnovati gratuitamente fino alla scadenza definitiva del pacchetto.</strong> A partire da questa data, i domini non disattivati saranno fatturati individualmente.",
   "domain_dashboard_general_information_alldom_renewal_link": "Annulla la disattivazione del pack",
   "domain_dashboard_general_information_alldom_termination_warning_close": "Chiudi",
-  "domain_contact_owner": "Proprietario"
+  "domain_contact_owner": "Proprietario",
+  "domain_configuration_renew": "Il tuo dominio è sospeso, ma ti ricordiamo che puoi rinnovarlo durante il Grace Period. Trascorso questo termine, verranno applicate spese supplementari.",
+  "domain_configuration_restorable": "Il dominio è in corso di eliminazione. Per recuperarlo con una spesa aggiuntiva, clicca sul link “Ripristinare”. In caso contrario il dominio verrà definitivamente eliminato.",
+  "domain_configuration_restorable_title_button": "Ripristinare"
 }
