--- a/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_pl_PL.json
@@ -825,5 +825,8 @@
   "domain_dashboard_general_information_alldom_termination_info": "Twój pakiet wygaśnie w dniu {{expirationDate}}. Zawarte w pakiecie domeny, z których nie zrezygnujesz, będą <strong>odnawiane bezpłatnie aż do ostatecznego wygaśnięcia pakietu.</strong> Po tym terminie, domeny, z których nie zrezygnowałeś, będą fakturowane indywidualnie.",
   "domain_dashboard_general_information_alldom_renewal_link": "Anuluj rezygnację z pakietu",
   "domain_dashboard_general_information_alldom_termination_warning_close": "Zamknij",
-  "domain_contact_owner": "Właściciel"
+  "domain_contact_owner": "Właściciel",
+  "domain_configuration_renew": "Twoja domena jest zawieszona. Możesz ją odnowić w okresie karencji. Po tym terminie zostaną zastosowane dodatkowe opłaty.",
+  "domain_configuration_restorable": "Trwa usuwanie Twojej domeny. Możesz ją przywrócić za dodatkową opłatą przy użyciu przeznaczonego do tego celu linku. W przeciwnym razie Twoja domena zostanie definitywnie usunięta.",
+  "domain_configuration_restorable_title_button": "Przywróć"
 }
