--- a/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_pt_PT.json
@@ -825,5 +825,8 @@
   "domain_dashboard_general_information_alldom_termination_info": "O seu pack expirará a {{ expirationDate }}. Os domínios incluídos que não tenham sido rescindidos serão <strong>renovados gratuitamente até à expiração definitiva do seu pack.</strong> Após essa data, os seus domínios não rescindidos serão faturados individualmente.",
   "domain_dashboard_general_information_alldom_renewal_link": "Anular a rescisão do pack",
   "domain_dashboard_general_information_alldom_termination_warning_close": "fechar",
-  "domain_contact_owner": "Titular"
+  "domain_contact_owner": "Titular",
+  "domain_configuration_renew": "O seu domínio foi suspenso, mas pode renová-lo durante o período de graça. Decorrido este prazo, serão aplicadas taxas adicionais.",
+  "domain_configuration_restorable": "O seu domínio está a ser eliminado. Pode restaurá-lo, com custos adicionais, através do link «Restaurar». Caso contrário, o domínio será eliminado de forma definitiva.",
+  "domain_configuration_restorable_title_button": "Restaurar"
 }
