--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/restore/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/restore/translations/Messages_fr_FR.json
@@ -1,6 +1,8 @@
 {
   "pci_projects_project_storages_cold_archive_containers_container_restore_title": "Restaurer votre archive",
-  "pci_projects_project_storages_cold_archive_containers_container_restore_description": "Vous êtez sur le point de restaurer votre conteneur {{ containerName }}.",
+  "pci_projects_project_storages_cold_archive_containers_container_restore_description_1": "Vous êtez sur le point de restaurer votre conteneur {{ containerName }}.",
+  "pci_projects_project_storages_cold_archive_containers_container_restore_description_2": "Cold archive a une durée de stockage minimale de 180 jours.",
+  "pci_projects_project_storages_cold_archive_containers_container_restore_description_3": "La restauration des données avant 180 jours entraîne des frais supplémentaires égaux aux coûts de restauration plus les frais de stockage actif pour les objets restaurés plus les coûts de stockage archivé actuels",
   "pci_projects_project_storages_cold_archive_containers_container_restore_submit_label": "Confirmer",
   "pci_projects_project_storages_cold_archive_containers_container_restore_cancel_label": "Annuler",
   "pci_projects_project_storages_cold_archive_containers_container_restore_success_message": "Le conteneur {{ containerName }} est en cours de restauration.",
