feat(storage.cold-archive): enable flush archive action in archive view
ref: MANAGER-10675
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/translations/Messages_fr_FR.json
@@ -28,9 +28,8 @@
   "pci_projects_project_storages_cold_archive_container_action_archive": "Archiver",
   "pci_projects_project_storages_cold_archive_container_action_restore": "Restaurer",
   "pci_projects_project_storages_cold_archive_container_action_delete_objects": "Supprimer les objets",
-  "pci_projects_project_storages_cold_archive_container_action_delete_container": "Supprimer le conteneur",
-  "pci_projects_project_storages_cold_archive_container_action_delete_archive": "Supprimer l'archive",
-  "pci_projects_project_storages_cold_archive_container_action_virtual_host": "Virtual Host",
+  "pci_projects_project_storages_cold_archive_container_action_delete_container": "Supprimer l'archive",
+  "pci_projects_project_storages_cold_archive_container_action_flush_archive": "Vider l'archive",
   "pci_projects_project_storages_cold_archive_container_manage": "Monitorer vos archives depuis l’espace client visuel fourni par OVHcloud Cold Archive",
   "pci_projects_project_storages_cold_archive_container_manage_documentation_link": "Comment configurer votre CLI",
   "pci_projects_project_storages_cold_archive_container_manage_description_1": "Vos opérations d’archivage, comme le téléchargement, la restauration ou la suppression de vos données, se font par ligne de commandes.",
