--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_fr_FR.json
@@ -16,7 +16,7 @@
   "pci_projects_project_storages_containers_add_type_title": "Sélectionnez un type de conteneur",
   "pci_projects_project_storages_containers_add_create_or_linked_user_title": "Associer un utilisateur",
   "pci_projects_project_storages_containers_add_create_or_linked_user_success_field_secret_key": "Votre clé secrète S3 :",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "Vous avez la possibilité de donner l'accès à votre conteneur à un utilisateur prédéfini ou de créer un nouvel utilisateur.",
+  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "Vous pouvez donner accès au conteneur à un de vos utilisateurs Openstack préconfigurés avec un role \"Administrateur\" ou \"Opérateur Object Storage\" ou bien créer un nouvel utilisateur.",
   "pci_projects_project_storages_containers_add_type_static_label": "Hébergement statique",
   "pci_projects_project_storages_containers_add_type_static_description": "Accès rapide et performant pour vos sites. Liez vos domaines et déposez vos fichiers.",
   "pci_projects_project_storages_containers_add_type_public_label": "Public",
