fix(i18n): add missing translations [CDS 2030]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_de_DE.json
@@ -7,11 +7,11 @@
   "pci_database_add_step1_description": "Wählen Sie den Datenbanktyp aus, der Ihren Anforderungen entspricht",
   "pci_database_add_step2_title": "Angebot auswählen",
   "pci_database_add_step3_title": "Wählen Sie einen Standort aus",
-  "pci_database_add_step4_title": "Dimensionierung der Nodes",
+  "pci_database_add_step4_title": "Node-Typ",
   "pci_database_add_nodes_count": "Anzahl an Nodes",
   "pci_database_add_nodes_count_tooltip": "Die Anzahl der Nodes variiert je nach gewähltem Dienst. Während der Beta-Phase ist es nicht möglich, diese Zahl bei der Erstellung zu ändern.",
   "pci_database_add_select_flavor": "Node-Modell auswählen",
-  "pci_database_add_step5_title": "Konfigurieren Sie Ihre Optionen",
+  "pci_database_add_step5_title": "Cluster-Dimensionierung",
   "pci_database_add_name": "Benennen Sie Ihren Datenbankdienst",
   "pci_database_add_network_mode_label": "Netzwerktyp",
   "pci_database_add_network_mode_public": "Öffentliches Netzwerk (Internet) ",
@@ -25,7 +25,7 @@
   "pci_database_add_subnet_description": "Sie können ein Subnetz erstellen. In diesem Fall geht jedoch die aktuelle Konfiguration verloren.",
   "pci_database_add_subnet_add": "Subnetz erstellen",
   "pci_database_add_subnet_loading": "Subnetze werden geladen",
-  "pci_database_add_step6_title": "Konfiguration des Datenbankdienstes",
+  "pci_database_add_step6_title": "Konfigurieren Sie Ihre Optionen",
   "pci_database_add_create_database": "Datenbankdienst erstellen",
   "pci_database_add_create_database_processing": "Dienst wird erstellt",
   "pci_database_add_create_database_success": "Ihr Dienst wird zurzeit erstellt und ist in wenigen Minuten verfügbar.",
@@ -55,8 +55,8 @@
   "pci_database_add_spec_network_subnetwork": "Subnetz:",
   "pci_database_add_spec_network_none": "Keine",
   "pci_database_add_spec_order": "Bestellen",
-  "pci_database_add_spec_nodes": "{{min}} Nodes",
-  "pci_database_add_spec_nodes_single": "{{min}} Node",
+  "pci_database_add_spec_nodes": "{{nodes}} Nodes",
+  "pci_database_add_spec_nodes_single": "{{nodes}} Node",
   "pci_database_add_spec_nodes_range": "{{min}} Nodes inklusive, bis zu {{max}} Nodes",
   "pci_database_add_spec_nodes_range_single": "{{min}} Node inklusive, bis zu {{max}} Nodes",
   "pci_database_add_show_command": "Das API-Äquivalent anzeigen",
@@ -66,5 +66,15 @@
   "pci_database_add_network_mode_helper_link": "Public Cloud vRack",
   "pci_database_add_network_mode_public_popover": "Das öffentliche Netzwerk ermöglicht die Verbindung von jeder autorisierten Quell-IP aus, die mit dem Internet verbunden ist, zum Beispiel Ihr Computer oder ein Remote Server.",
   "pci_database_add_network_mode_private_popover": "Das private Netzwerk lässt keine öffentliche Konnektivität zu, sondern nur Verbindungen innerhalb Ihres vRack.",
-  "pci_database_add_spec_storage": "Storage:"
+  "pci_database_add_spec_storage": "Storage:",
+  "pci_database_add_step7_title": "Konfiguration des Datenbankdienstes",
+  "pci_database_add_nodes_input_label": "Wählen Sie die Anzahl der Knoten für den Cluster aus",
+  "pci_database_add_spec_cluster": "Cluster:",
+  "pci_database_add_included_nodes_offer": "Sie nutzen die Lösung {{offerName}} mit {{offerNodes}} Node(s).",
+  "pci_database_add_storage_sizing": "Zusätzlicher Storage",
+  "pci_database_add_storage_sizing_offer": "Ihr Node-Modell {{flavorName}} enthält {{includedStorage}} Storage. Sie können bis zu {{addableStorage}} zusätzlichen Storage-Speicherplatz hinzufügen. Dies erfolgt in Schritten von {{step}}.",
+  "pci_database_add_spec_storage_added": "{{total}} (davon {{included}} inklusive)",
+  "pci_database_add_price_unit_month": "/ Monat",
+  "pci_database_add_price_unit_hour": "/ Stunde",
+  "pci_database_add_price_unit_switch_label": "Preise pro Monat anzeigen"
 }
