--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_en_GB.json
@@ -7,11 +7,11 @@
   "pci_database_add_step1_description": "Select a database type to suit your needs",
   "pci_database_add_step2_title": "Select a service plan",
   "pci_database_add_step3_title": "Select a region",
-  "pci_database_add_step4_title": "Size of nodes",
+  "pci_database_add_step4_title": "Node type",
   "pci_database_add_nodes_count": "Number of nodes",
   "pci_database_add_nodes_count_tooltip": "The number of nodes depends on the solution you have chosen. In the beta test version, this number cannot be changed at the creation step.",
   "pci_database_add_select_flavor": "Select the node template",
-  "pci_database_add_step5_title": "Configure your options",
+  "pci_database_add_step5_title": "Cluster sizing",
   "pci_database_add_name": "Name your database service",
   "pci_database_add_network_mode_label": "Network type",
   "pci_database_add_network_mode_public": "Public network (internet) ",
@@ -25,7 +25,7 @@
   "pci_database_add_subnet_description": "You can create a subnet, but you will lose your current configuration.",
   "pci_database_add_subnet_add": "Create subnet",
   "pci_database_add_subnet_loading": "Loading subnets",
-  "pci_database_add_step6_title": "Database service configuration",
+  "pci_database_add_step6_title": "Configure your options",
   "pci_database_add_create_database": "Create a database service",
   "pci_database_add_create_database_processing": "Creating service...",
   "pci_database_add_create_database_success": "Your service is being created, and will be available in a few minutes.",
@@ -55,8 +55,8 @@
   "pci_database_add_spec_network_subnetwork": "Subnet:",
   "pci_database_add_spec_network_none": "None",
   "pci_database_add_spec_order": "Order",
-  "pci_database_add_spec_nodes": "{{min}} nodes",
-  "pci_database_add_spec_nodes_single": "{{min}} node",
+  "pci_database_add_spec_nodes": "{{nodes}} nodes",
+  "pci_database_add_spec_nodes_single": "{{nodes}} node",
   "pci_database_add_spec_nodes_range": "{{min}} nodes included, up to {{max}} nodes",
   "pci_database_add_spec_nodes_range_single": "{{min}} nodes included, up to {{max}} nodes",
   "pci_database_add_show_command": "See the API equivalent",
@@ -66,5 +66,15 @@
   "pci_database_add_network_mode_helper_link": "Public Cloud vRack",
   "pci_database_add_network_mode_public_popover": "The public network enables connections from any authorised source IP connected to the internet (your computer, a remote server, etc.)",
   "pci_database_add_network_mode_private_popover": "The private network does not allow public connectivity, and only allows connections from within your vRack.",
-  "pci_database_add_spec_storage": "Storage:"
+  "pci_database_add_spec_storage": "Storage:",
+  "pci_database_add_step7_title": "Database service configuration",
+  "pci_database_add_nodes_input_label": "Select the number of nodes in the cluster",
+  "pci_database_add_spec_cluster": "Cluster:",
+  "pci_database_add_included_nodes_offer": "Your {{offerName}} solution includes {{offerNodes}} nodes.",
+  "pci_database_add_storage_sizing": "Additional storage",
+  "pci_database_add_storage_sizing_offer": "The {{flavorName}} node model includes {{includedStorage}} storage, to which you can add up to {{addableStorage}} of additional storage in increments of {{step}}.",
+  "pci_database_add_spec_storage_added": "{{total}} ({{included}} included)",
+  "pci_database_add_price_unit_month": "/month",
+  "pci_database_add_price_unit_hour": "/hour",
+  "pci_database_add_price_unit_switch_label": "Show prices per month"
 }
