--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_it_IT.json
@@ -7,11 +7,11 @@
   "pci_database_add_step1_description": "Seleziona il tipo di database più adatto alle tue esigenze",
   "pci_database_add_step2_title": "Seleziona un piano",
   "pci_database_add_step3_title": "Seleziona una localizzazione",
-  "pci_database_add_step4_title": "Dimensionamento dei nodi",
+  "pci_database_add_step4_title": "Tipo di nodo",
   "pci_database_add_nodes_count": "Numero di nodi",
   "pci_database_add_nodes_count_tooltip": "Il numero di nodi varia in base al servizio scelto. Durante la fase beta, questo numero non può essere modificato al momento della creazione.",
   "pci_database_add_select_flavor": "Seleziona il modello dei nodi",
-  "pci_database_add_step5_title": "Configura le opzioni",
+  "pci_database_add_step5_title": "Dimensionamento del cluster",
   "pci_database_add_name": "Assegna un nome al servizio di database",
   "pci_database_add_network_mode_label": "Tipo di rete",
   "pci_database_add_network_mode_public": "Rete pubblica (Internet) ",
@@ -25,7 +25,7 @@
   "pci_database_add_subnet_description": "È possibile creare una sottorete, ma verrà persa la configurazione corrente.",
   "pci_database_add_subnet_add": "Crea una sottorete",
   "pci_database_add_subnet_loading": "Caricamento sottoreti",
-  "pci_database_add_step6_title": "Configurazione del servizio di database",
+  "pci_database_add_step6_title": "Configura le opzioni",
   "pci_database_add_create_database": "Crea un servizio di database",
   "pci_database_add_create_database_processing": "Creazione del servizio in corso...",
   "pci_database_add_create_database_success": "Il servizio è in corso di creazione e sarà disponibile tra pochi minuti.",
@@ -55,8 +55,8 @@
   "pci_database_add_spec_network_subnetwork": "Sottorete:",
   "pci_database_add_spec_network_none": "Nessuno",
   "pci_database_add_spec_order": "Ordina",
-  "pci_database_add_spec_nodes": "{{min}} nodi",
-  "pci_database_add_spec_nodes_single": "{{min}} nodo",
+  "pci_database_add_spec_nodes": "{{nodes}} nodi",
+  "pci_database_add_spec_nodes_single": "{{nodes}} nodo",
   "pci_database_add_spec_nodes_range": "{{min}} nodi inclusi, fino a {{max}} nodi",
   "pci_database_add_spec_nodes_range_single": "{{min}} nodi inclusi, fino a {{max}} nodi",
   "pci_database_add_show_command": "Visualizza l’API equivalente",
@@ -66,5 +66,15 @@
   "pci_database_add_network_mode_helper_link": "vRack Public Cloud",
   "pci_database_add_network_mode_public_popover": "La rete pubblica permette la connessione da qualsiasi IP sorgente autorizzato e collegato a Internet (il tuo computer, un server remoto, ...)",
   "pci_database_add_network_mode_private_popover": "La rete privata non permette la connettività pubblica e autorizza solo le connessioni provenienti dall'interno della vRack.",
-  "pci_database_add_spec_storage": "Storage:"
+  "pci_database_add_spec_storage": "Storage:",
+  "pci_database_add_step7_title": "Configurazione del servizio di database",
+  "pci_database_add_nodes_input_label": "Seleziona il numero di nodi del cluster",
+  "pci_database_add_spec_cluster": "Cluster:",
+  "pci_database_add_included_nodes_offer": "La soluzione {{offerName}} include {{offerNodes}} nodi.",
+  "pci_database_add_storage_sizing": "Storage aggiuntivo",
+  "pci_database_add_storage_sizing_offer": "Il modello di nodo {{flavorName}} include {{includedStorage}} di storage, a cui è possibile aggiungere fino a {{addableStorage}} di storage supplementare in intervalli di {{step}}.",
+  "pci_database_add_spec_storage_added": "{{total}} (di cui {{included}} inclusi)",
+  "pci_database_add_price_unit_month": "/mese",
+  "pci_database_add_price_unit_hour": "/ora",
+  "pci_database_add_price_unit_switch_label": "Visualizzare le tariffe mensili"
 }
