--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_pl_PL.json
@@ -7,11 +7,11 @@
   "pci_database_add_step1_description": "Wybierz rodzaj bazy danych odpowiadający Twoim potrzebom",
   "pci_database_add_step2_title": "Wybierz pakiet",
   "pci_database_add_step3_title": "Wybierz lokalizację",
-  "pci_database_add_step4_title": "Konfiguracja węzłów",
+  "pci_database_add_step4_title": "Rodzaj węzła",
   "pci_database_add_nodes_count": "Liczba węzłów",
   "pci_database_add_nodes_count_tooltip": "Liczba węzłów zmienia się w zależności od wybranej oferty. W wersji testowej beta nie można zmienić tej liczby na etapie tworzenia.",
   "pci_database_add_select_flavor": "Wybierz model węzłów",
-  "pci_database_add_step5_title": "Skonfiguruj opcje",
+  "pci_database_add_step5_title": "Konfiguracja klastra",
   "pci_database_add_name": "Nazwij usługę bazy danych",
   "pci_database_add_network_mode_label": "Typ sieci",
   "pci_database_add_network_mode_public": "Sieć publiczna (Internet) ",
@@ -25,7 +25,7 @@
   "pci_database_add_subnet_description": "Możesz utworzyć podsieć, ale utracisz bieżącą konfigurację.",
   "pci_database_add_subnet_add": "Utwórz podsieć",
   "pci_database_add_subnet_loading": "Pobieranie podsieci",
-  "pci_database_add_step6_title": "Konfiguracja usługi bazy danych",
+  "pci_database_add_step6_title": "Skonfiguruj opcje",
   "pci_database_add_create_database": "Utwórz usługę bazy danych",
   "pci_database_add_create_database_processing": "Trwa zakładanie usługi",
   "pci_database_add_create_database_success": "Trwa tworzenie usługi. Będzie ona dostępna za kilka minut.",
@@ -55,8 +55,8 @@
   "pci_database_add_spec_network_subnetwork": "Podsieć:",
   "pci_database_add_spec_network_none": "Brak",
   "pci_database_add_spec_order": "Zamów",
-  "pci_database_add_spec_nodes": "{{min}} węzłów",
-  "pci_database_add_spec_nodes_single": "{{min}} węzeł",
+  "pci_database_add_spec_nodes": "{{nodes}} węzły/węzłów",
+  "pci_database_add_spec_nodes_single": "{{nodes}} węzeł",
   "pci_database_add_spec_nodes_range": "{{min}} węzłów zawartych w ofercie, do {{max}} węzłów",
   "pci_database_add_spec_nodes_range_single": "{{min}} węzły zawarte w ofercie, do {{max}} węzłów",
   "pci_database_add_show_command": "Sprawdź ekwiwalent API",
@@ -66,5 +66,15 @@
   "pci_database_add_network_mode_helper_link": "vRack Public Cloud",
   "pci_database_add_network_mode_public_popover": "Sieć publiczna umożliwia połączenie z dowolnego autoryzowanego źródła IP podłączonego do Internetu (Twój komputer, zdalny serwer, etc.)",
   "pci_database_add_network_mode_private_popover": "Sieć prywatna nie pozwala na połączenie z siecią publiczną i dopuszcza jedynie połączenia w ramach usługi vRack.",
-  "pci_database_add_spec_storage": "Przestrzeń dyskowa:"
+  "pci_database_add_spec_storage": "Przestrzeń dyskowa:",
+  "pci_database_add_step7_title": "Konfiguracja usługi bazy danych",
+  "pci_database_add_nodes_input_label": "Wybierz liczbę węzłów klastra",
+  "pci_database_add_spec_cluster": "Klaster:",
+  "pci_database_add_included_nodes_offer": "Liczba węzłów, które obejmuje usługa {{offerName}}: {{offerNodes}}.",
+  "pci_database_add_storage_sizing": "Dodatkowa przestrzeń dyskowa",
+  "pci_database_add_storage_sizing_offer": "Twój model węzła {{flavorName}} zawiera {{includedStorage}} przestrzeni dyskowej, do której możesz dodać do {{addableStorage}} przestrzeni w przedziałach co {{step}}.",
+  "pci_database_add_spec_storage_added": "{{total}} (w tym {{included}} zawarte w cenie)",
+  "pci_database_add_price_unit_month": "/ m-c",
+  "pci_database_add_price_unit_hour": "/ godz.",
+  "pci_database_add_price_unit_switch_label": "Wyświetl ceny miesięczne"
 }
