--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_pt_PT.json
@@ -7,11 +7,11 @@
   "pci_database_add_step1_description": "Selecione o tipo de base de dados que corresponde às suas necessidades",
   "pci_database_add_step2_title": "Selecione um plano",
   "pci_database_add_step3_title": "Selecione uma localização",
-  "pci_database_add_step4_title": "Dimensionamento dos nós",
+  "pci_database_add_step4_title": "Tipo de nó",
   "pci_database_add_nodes_count": "Número de nós",
   "pci_database_add_nodes_count_tooltip": "O número de nós varia em função da oferta de serviço escolhida. Durante a fase beta, este número não pode ser alterado na altura da criação.",
   "pci_database_add_select_flavor": "Selecione o modelo dos nós",
-  "pci_database_add_step5_title": "Configure as suas opções",
+  "pci_database_add_step5_title": "Dimensionamento do cluster",
   "pci_database_add_name": "Dê um nome ao seu serviço de base de dados",
   "pci_database_add_network_mode_label": "Tipo de rede",
   "pci_database_add_network_mode_public": "Rede pública (Internet) ",
@@ -25,7 +25,7 @@
   "pci_database_add_subnet_description": "Pode criar uma sub-rede, mas perderá a sua configuração atual.",
   "pci_database_add_subnet_add": "Criar uma sub-rede",
   "pci_database_add_subnet_loading": "Carregamento de sub-redes",
-  "pci_database_add_step6_title": "Configuração do serviço de base de dados",
+  "pci_database_add_step6_title": "Configure as suas opções",
   "pci_database_add_create_database": "Criar um serviço de base de dados",
   "pci_database_add_create_database_processing": "O serviço está a ser criado",
   "pci_database_add_create_database_success": "O serviço está a ser criado e estará disponível dentro de alguns minutos.",
@@ -55,8 +55,8 @@
   "pci_database_add_spec_network_subnetwork": "Sub-rede:",
   "pci_database_add_spec_network_none": "Nenhum",
   "pci_database_add_spec_order": "Encomendar",
-  "pci_database_add_spec_nodes": "{{min}} nós",
-  "pci_database_add_spec_nodes_single": "{{min}} nó",
+  "pci_database_add_spec_nodes": "{{nodes}} nós",
+  "pci_database_add_spec_nodes_single": "{{nodes}} nó",
   "pci_database_add_spec_nodes_range": "{{min}} nós incluídos, até {{max}} nós",
   "pci_database_add_spec_nodes_range_single": "{{min}} nó incluído, até {{max}} nós",
   "pci_database_add_show_command": "Ver o equivalente da API",
@@ -66,5 +66,15 @@
   "pci_database_add_network_mode_helper_link": "vRack do Public Cloud",
   "pci_database_add_network_mode_public_popover": "A rede pública permite a ligação a partir de qualquer IP de origem autorizado e ligado à Internet (o seu computador, um servidor remoto, etc.).",
   "pci_database_add_network_mode_private_popover": "A rede privada não permite a ligação pública e apenas autoriza as ligações provenientes do interior do seu vRack.",
-  "pci_database_add_spec_storage": "Armazenamento:"
+  "pci_database_add_spec_storage": "Armazenamento:",
+  "pci_database_add_step7_title": "Configuração do serviço de base de dados",
+  "pci_database_add_nodes_input_label": "Selecione o número de nós do cluster",
+  "pci_database_add_spec_cluster": "Cluster:",
+  "pci_database_add_included_nodes_offer": "A sua oferta {{offerName}} inclui {{offerNodes}} nó(s).",
+  "pci_database_add_storage_sizing": "Armazenamento adicional",
+  "pci_database_add_storage_sizing_offer": "O seu modelo de nó {{flavorName}} inclui {{includedStorage}} de armazenamento aos quais pode adicionar até {{addableStorage}} de armazenamento suplementar por passo de {{step}}.",
+  "pci_database_add_spec_storage_added": "{{total}} (de {{included}} incluídos)",
+  "pci_database_add_price_unit_month": "/mês",
+  "pci_database_add_price_unit_hour": "/hora",
+  "pci_database_add_price_unit_switch_label": "Mostrar os preços ao mês"
 }
