--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/plans-list/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/plans-list/translations/Messages_es_ES.json
@@ -1,7 +1,7 @@
 {
   "pci_database_plans_list_spec_ram": "De {{min}} a {{max}} RAM",
   "pci_database_plans_list_spec_core": "De {{min}} a {{max}} vCores",
-  "pci_database_plans_list_spec_storage": "De {{min}} a {{max}} de almacenamiento SSD",
+  "pci_database_plans_list_spec_storage": "De {{min}} a {{max}} de almacenamiento",
   "pci_database_plans_list_spec_nodes": "{{min}} nodos",
   "pci_database_plans_list_spec_nodes_single": "{{min}} nodo",
   "pci_database_plans_list_spec_nodes_range": "{{min}} nodos incluidos, hasta {{max}} nodos",
@@ -9,8 +9,10 @@
   "pci_database_plans_list_spec_backup": "Copias de seguridad manuales y automáticas",
   "pci_database_plans_list_spec_ram_unique": "{{ram}} RAM",
   "pci_database_plans_list_spec_core_unique": "{{core}} vCores",
-  "pci_database_plans_list_spec_storage_unique": "{{storage}} de almacenamiento SSD",
+  "pci_database_plans_list_spec_storage_unique": "{{storage}} de almacenamiento",
   "pci_database_plans_list_current_offer": "Solución actual",
   "pci_database_plans_list_spec_private_network": "Redes privadas",
-  "pci_database_plans_list_spec_price_unit": " /hora"
+  "pci_database_plans_list_spec_price_unit": " /hora",
+  "pci_database_plans_list_spec_price_unit_hour": " /hora",
+  "pci_database_plans_list_spec_price_unit_month": " /mes"
 }
