--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/translations/Messages_de_DE.json
@@ -9,8 +9,8 @@
   "pci_databases_general_information_node_type_label": "Node-Modell",
   "pci_databases_general_information_node_type_cpu": "{{coreNumber}} CPU",
   "pci_databases_general_information_node_type_memory": "{{memorySize}} RAM",
-  "pci_databases_general_information_node_type_storage": "{{storageSize}} SSD Storage",
-  "pci_databases_general_information_node_type_storage_range": "{{storageMinSize}} bis {{storageMaxSize}} SSD Storage",
+  "pci_databases_general_information_node_type_storage": "{{storage}} Storage",
+  "pci_databases_general_information_node_type_storage_range": "{{minStorage}} bis {{maxStorage}} Storage",
   "pci_databases_general_information_upgrade_node": "Node-Modell upgraden",
   "pci_databases_general_information_service_label": "Dienst",
   "pci_databases_general_information_service_URI_label": "URI",
@@ -82,5 +82,10 @@
   "pci_databases_general_information_support_level_label": "Support-Level",
   "pci_databases_general_information_support_level_standard": "Standard",
   "pci_databases_general_information_support_create_ticket_label": "Ein Ticket erstellen",
-  "pci_databases_general_information_storage_label": "Speicher"
+  "pci_databases_general_information_storage_label": "Speicher",
+  "pci_databases_general_information_storage_range_included": "(davon {{includedStorage}} inklusive)",
+  "pci_databases_general_information_storage_type_local-ssd": "Lokale SSD-Festplatte",
+  "pci_databases_general_information_storage_type_high-speed": "Remote Disc der ersten Generation",
+  "pci_databases_general_information_storage_type_high-speed-gen2": "Remote Disc der zweiten Generation",
+  "pci_databases_general_information_storage_upgrade_link": "Zusätzlichen Storage hinzufügen"
 }
