--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/translations/Messages_en_GB.json
@@ -9,8 +9,8 @@
   "pci_databases_general_information_node_type_label": "Node template",
   "pci_databases_general_information_node_type_cpu": "{{coreNumber}} CPU",
   "pci_databases_general_information_node_type_memory": "{{memorySize}} RAM",
-  "pci_databases_general_information_node_type_storage": "{{storageSize}} SSD storage",
-  "pci_databases_general_information_node_type_storage_range": "{{storageMinSize}} to {{storageMaxSize}} SSD storage",
+  "pci_databases_general_information_node_type_storage": "{{storage}} storage",
+  "pci_databases_general_information_node_type_storage_range": "From {{minStorage}} to {{maxStorage}} storage",
   "pci_databases_general_information_upgrade_node": "Upgrade your node template",
   "pci_databases_general_information_service_label": "Service",
   "pci_databases_general_information_service_URI_label": "URI",
@@ -82,5 +82,10 @@
   "pci_databases_general_information_support_level_label": "Support level",
   "pci_databases_general_information_support_level_standard": "Standard",
   "pci_databases_general_information_support_create_ticket_label": "Create a ticket",
-  "pci_databases_general_information_storage_label": "Storage"
+  "pci_databases_general_information_storage_label": "Storage",
+  "pci_databases_general_information_storage_range_included": "({{includedStorage}} included)",
+  "pci_databases_general_information_storage_type_local-ssd": "Local SSD",
+  "pci_databases_general_information_storage_type_high-speed": "First generation remote drive",
+  "pci_databases_general_information_storage_type_high-speed-gen2": "Second generation remote drive",
+  "pci_databases_general_information_storage_upgrade_link": "Add more storage"
 }
