--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/translations/Messages_it_IT.json
@@ -9,8 +9,8 @@
   "pci_databases_general_information_node_type_label": "Modello di nodo",
   "pci_databases_general_information_node_type_cpu": "{{coreNumber}} CPU",
   "pci_databases_general_information_node_type_memory": "{{memorySize}} RAM",
-  "pci_databases_general_information_node_type_storage": "{{storageSize}} di storage SSD",
-  "pci_databases_general_information_node_type_storage_range": "da {{storageMinSize}} a {{storageMaxSize}} di storage SSD",
+  "pci_databases_general_information_node_type_storage": "{{storage}} di storage",
+  "pci_databases_general_information_node_type_storage_range": "Da {{minStorage}} a {{maxStorage}} di storage",
   "pci_databases_general_information_upgrade_node": "Migliora il modello di nodo",
   "pci_databases_general_information_service_label": "Servizio",
   "pci_databases_general_information_service_URI_label": "URI",
@@ -82,5 +82,10 @@
   "pci_databases_general_information_support_level_label": "Livello di supporto",
   "pci_databases_general_information_support_level_standard": "Standard",
   "pci_databases_general_information_support_create_ticket_label": "Creare un ticket",
-  "pci_databases_general_information_storage_label": "Storage"
+  "pci_databases_general_information_storage_label": "Storage",
+  "pci_databases_general_information_storage_range_included": "(di cui {{includedStorage}} inclusi)",
+  "pci_databases_general_information_storage_type_local-ssd": "Disco SSD locale",
+  "pci_databases_general_information_storage_type_high-speed": "Disco remoto di prima generazione",
+  "pci_databases_general_information_storage_type_high-speed-gen2": "Disco remoto di seconda generazione",
+  "pci_databases_general_information_storage_upgrade_link": "Aggiungere storage supplementare"
 }
