--- a/packages/manager/apps/dedicated/client/app/components/ip/agoraOrder/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/components/ip/agoraOrder/translations/Messages_pt_PT.json
@@ -14,6 +14,5 @@
   "ipv4Block_organization_description3": "Se não associar uma organização, as informações da sua conta OVHcloud (NIC) poderão ser utilizadas",
   "ipv4Block_organization_info_banner": "O nome da organização associada ao seu bloco de endereços IP, bem como as informações de contacto correspondentes, figurarão na base de dados pública Whois",
   "ip_agora_table_submit_text": "Prosseguir a encomenda",
-  "ip_agora_table_cancel_text": "Retroceder",
-  "ipv4Block_price_per_ip": "por endereço IP"
+  "ip_agora_table_cancel_text": "Retroceder"
 }
