--- a/packages/manager/apps/web/client/app/hosting/database/private-sql-activation/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/hosting/database/private-sql-activation/translations/Messages_es_ES.json
@@ -29,6 +29,5 @@
   "privatesql_activation_version_v_redis_40": "Redis 4.0",
   "privatesql_activation_option_private-sql": "SQL Privado {{diskSpace}} MB",
   "privatesql_activation_success": "La base de datos se ha activado correctamente. Consultar <a href=\"{{ billUrl }}\" target=\"_blank\" rel=\"noopener\">mi factura</a>.",
-  "privatesql_activation_success_bc": "La <a href=\"{{ bcUrl }}\" target=\"_blank\" rel=\"noopener\">orden de pedido</a> se ha generado correctamente. Por favor, abone la orden de pedido para poder activar la base de datos.",
-  "privatesql_activation_option_private-sql": "SQL Privado {{diskSpace}} MB"
+  "privatesql_activation_success_bc": "La <a href=\"{{ bcUrl }}\" target=\"_blank\" rel=\"noopener\">orden de pedido</a> se ha generado correctamente. Por favor, abone la orden de pedido para poder activar la base de datos."
 }
